src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A03.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf;

classdiagram C4A03 {

}
